[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jh_shibboleth_clerk"
version = "0.0.1"
authors = [
  { name="Yuqiang Gu", email="gyq673516081@gmail.com" },
]

description = "Use Shibboleth and Clerk Authentication at same time"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/databrix-org/jhub_shibboleth_oauth2"
Issues = "https://github.com/databrix-org/jhub_shibboleth_oauth2/issues"